--- a/package.json
+++ b/package.json
@@ -23,17 +23,34 @@
   "homepage": "https://github.com/Akashrine/fastatik#readme",
   "devDependencies": {
     "browser-sync": "2.6.5",
+    "css-mqpacker": "^3.1.0",
+    "event-stream": "^3.3.1",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "2.1.0",
     "gulp-cache": "0.2.8",
     "gulp-concat": "2.5.2",
+    "gulp-csslint": "^0.1.5",
     "gulp-imagemin": "2.2.1",
     "gulp-minify-css": "1.0.0",
     "gulp-plumber": "1.0.0",
     "gulp-rename": "1.2.2",
-    "gulp-sass": "1.3.3",
+    "gulp-sass": "^2.0.4",
+    "gulp-size": "^1.2.3",
     "gulp-compile-handlebars": "^0.5.0",
-    "gulp-uglify": "1.2.0"
+    "gulp-uglify": "1.2.0",
+    "gulp-watch": "^4.3.4",
+    "gulp-postcss": "^5.1.10",
+    "postcss-simple-vars": "^0.3.0",
+    "autoprefixer-core": "^5.2.1",
+    "csswring": "^3.0.5",
+    "postcss-nested": "^0.3.2",
+    "postcss": "^4.1.16"
+  },
+    "scripts": {
+    "start": "gulp",
+    "csslint": "gulp csslint",
+    "minify-css": "gulp minify-css",
+    "images": "gulp minify-img"
   }
 }
